tests/baselines/reference/tsxElementResolution3.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(12,7): error TS2322: Type '{ w: string; }' is not assignable to type '{ n: string; }'.
  Property 'w' does not exist on type '{ n: string; }'.


==== file.tsx (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    	    [x: string]: { n: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // Error
    <span w='err' />;
          ~
!!! error TS2322: Type '{ w: string; }' is not assignable to type '{ n: string; }'.
!!! error TS2322:   Property 'w' does not exist on type '{ n: string; }'.